# AniverseGateway

./: .aguild v4.9.10  .aguild.491  .augment-guidelines  .cursor-agent-terminal.md  .cursorrules  .cursorrules-terminal  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEVELOPMENT_PROGRESS.md  GIT_LINE_ENDING_FIX.md  LICENSE  PROJECT_REDUX_REFACTOR_PROGRESS.md  QUICK_FIX_TRANSLATION_RESULTS.md  README.md  SUBTITLE_EDITOR_REQUIREMENTS_ANALYSIS.md  TRANSLATION_BUG_FIX_SUMMARY.md  augmentrules-terminal  bug_fix_analysis.md  build_package_cn.bat  build_package_fixed.bat  build_package_ps.bat  build_package_safe.ps1  check-environment.ps1  clean_build.bat  comprehensive_test_v2.py  debug_app.py  debug_backend.bat  extract_subs.py  extract_subtitles.py  final_comprehensive_test.py  fix-encoding-and-start.ps1  fix-node-types.ps1  fix_deps.ps1  fix_encoding.bat  fix_project.ps1  fix_venv.bat  fix_venv.ps1  force_build.bat  (+35 more)
.cunzhi-memory/: context.md  metadata.json  patterns.md  rules.md
.cursor/rules/: commit.mdc  frontend.mdc  python.mdc
backend/: __init__.py  main.py  run_api_server.py
backend/api/: __init__.py  app.py  dependencies.py
backend/api/routers/: __init__.py  config.py  export.py  models.py  providers.py  speech_to_text.py  subtitles.py  tasks.py  templates.py  test_translation.py  translate.py  translate_fixed.py  translate_origin.py  translate_v2.py  videos.py
backend/core/: __init__.py  faster_whisper_config_util.py  ffmpeg.py  logging_utils.py  speech_to_text.py  subtitle_extractor.py  subtitle_translator.py
backend/schemas/: __init__.py  api.py  config.py  provider.py  subtitle.py  task.py
backend/services/: __init__.py  ai_service.py  custom_ai_service.py  local_model_service.py  ollama_service.py  provider_service.py  srt_translator.py  subtitle_export.py  subtitle_storage.py  task_cancellation_manager.py  task_manager.py  translator.py  utils.py  validators.py  video_storage.py
backend/utils/: __init__.py  srt_optimizer.py  validators.py
docs/: CHERRY_STUDIO_API_KEY_SAVE_PLAN.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STEPS.md  IMPLEMENTATION_PLAN.md  MIGRATION_PROGRESS.md  README.md  SCHEMA_DRIVEN_DEVELOPMENT.md  SRT_OPTIMIZATION_GUIDE.md  UV_DEPENDENCY_MANAGEMENT.md  ml_platform_setup.md  speech_to_text.md
docs/code_review/: CONFIG_MANAGEMENT_DETAILED_ANALYSIS.md  FUNCTIONAL_DESIGN_CONFLICTS_ANALYSIS.md  TRANSLATION_ROUTES_ANALYSIS.md
docs/project/: BUG_SOLUTION_REPORT.md  DEVELOPMENT_PROGRESS.md  FINAL_PACKAGING_SOLUTION.md  FINAL_SOLUTION_SUMMARY.md  FRONTEND_MIGRATION_GUIDE.md  Layout_Task_Progress.md  PACKAGING_README.md  PACKAGING_SOLUTION.md  PACKAGING_TROUBLESHOOTING.md  PROJECT_REDUX_REFACTOR_PROGRESS.md  SUBTITLE_EDITOR_REQUIREMENTS_ANALYSIS.md  TRANSLATION_TESTING_GUIDE.md  VIDEO_STORAGE_INSTANCE_FIX.md  animation-technical-details.md  animation-unification-refactor.md  subtitle_api_fix_summary.md  task_analysis.md
examples/: sample.srt  translate_srt.py
frontend/electron-app/: electron-builder.json  index.html  package.json  tsconfig.json  vite.config.ts  黑底问题优化任务.md
frontend/electron-app/electron/: preload.ts
frontend/electron-app/electron/main/: index.ts
frontend/electron-app/src/: App.tsx  electron-mock.ts  electron.d.ts  main.tsx
frontend/electron-app/src/components/: CustomProviderDialog.tsx  CustomProviderList.tsx  ErrorSnackbar.tsx  InlineTranslationEditor.tsx  Layout.tsx  LocalModelDialog.tsx  OllamaDialog.tsx  ProviderDetail.tsx  ProviderList.tsx  SubtitleEditor.tsx  TranslationConfig.tsx  TranslationResultEditor.tsx  TranslationTestPanel.tsx  VideoPlayer.tsx
frontend/electron-app/src/context/: AppContext.tsx
frontend/electron-app/src/hooks/: useActiveProviders.ts  usePerformanceMonitor.ts  useTranslation.ts  useTranslationEditor.ts  useVideoDetail.ts
frontend/electron-app/src/pages/: Home.tsx  Settings.tsx  VideoDetail.tsx  (+2 more)
frontend/shared/: package.json
frontend/shared/src/: index.ts  types.ts
scripts/: README_SILICONFLOW_TEST.md  build.py  dev.py  extract_subtitles.py  migrate_backend.py  migrate_frontend.py  package.py  setup_environment.py  subtitle_extract.py  test_siliconflow_api.py
src/: ELECTRON_DEV_GUIDE.md  check_api_server.py  fix-electron-issues.ps1  fix-preload-path.ps1  fix-ts-compile.ps1  fix_api_server.bat  package.json  pnpm-lock.yaml  run_api_server.py  run_api_test.bat  test_api.py  test_api_simple.py  test_api_unittest.py  test_api_uv.cmd  test_api_uv.py  test_md.md  test_providers_api.py  test_server.py
src/backend/: main.py
src/electron/: electron-builder.json  index.html  main.js  package.json  settings.html
src/subtranslate/: __init__.py  main.py
src/subtranslate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/subtranslate/api/: __init__.py  app.py  dependencies.py  websocket.py
src/subtranslate/cli/: __init__.py  convert_with_gui_config.py  transcribe.py
src/subtranslate/core/: __init__.py  faster_whisper_config_util.py  ffmpeg.py  speech_to_text.py  subtitle_extractor.py  subtitle_translator.py
src/subtranslate/examples/: mvp_test.py  srt_optimizer_demo.py  srt_translation_with_optimizer.py  srt_translator_demo.py  subtitle_export_test.py  test_nested_tags.py  test_translator.py
src/subtranslate/schemas/: __init__.py  api.py  config.py  faster_whisper_config.py  models.py  provider.py  subtitle.py  task.py  video.py
src/subtranslate/services/: __init__.py  ai_service.py  custom_ai_service.py  local_model_service.py  ollama_service.py  provider_service.py  srt_translator.py  subtitle_export.py  subtitle_storage.py  task_manager.py  translator.py  utils.py  validators.py  video_storage.py
src/subtranslate/ui/: __init__.py
src/tests/: README.md  api_endpoints_test.py  api_test.py  run_api_tests.py
test_exports/: source.zh.srt
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_ffmpeg.py  test_subtitle_extractor.py
tests/integration/test_exports/: source.srt
tests/schemas/: __init__.py  test_config.py  test_task.py  test_video.py
tests/services/: test_srt_optimizer.py  test_validators.py
(+37 files in other folders)
