[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtranslate"
version = "0.1.0"
description = "智能视频字幕翻译系统"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "SubTranslate Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.1",
    "aiofiles>=23.1.0",
    "requests>=2.31.0",
    "ffmpeg-python>=0.2.0",
    "pysrt>=1.1.2",
    "chardet>=5.2.0",
    "openai>=1.6.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.5",
    "pytest-asyncio>=0.21.1",
    "pre-commit>=3.5.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/subtranslate"
"Bug Tracker" = "https://github.com/yourusername/subtranslate/issues"

[project.scripts]
subtranslate = "subtranslate.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 79
target-version = "py310"
select = ["E", "F", "I"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.isort]
known-first-party = ["subtranslate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*" 